<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--! Labels !-->
    <string name="app_name">CentralUFG</string>
    <string name="label_menu">Menu</string>
    <string name="label_fechar">Fechar</string>
    <string name="label_aguarde">Aguarde</string>

    <!--! Array de opcoes !-->
    <string-array
        name="opcoes_menu">
        <item>Home</item>
        <item>Frase do dia</item>
        <item>Ouvidoria</item>
    </string-array>

    <!--! Frases !-->
    <string name="hello_world">Esta é a view inicial. Aqui ficarão os itens do mural.\n Escolha uma
    das opções da barra lateral para navegar nas opções.</string>
    <string name="action_settings">Menu de exemplo</string>
    <string name="alerta_opcao_invalida">Opção inválida</string>
    <string name="alerta_server_error">Não foi possível conectar-se ao servidor</string>
    <string name="alerta_no_content">Nenhuma informação para ser visualizada</string>

    <!--! OUVIDORIA !-->
    <string name="action_anexar_imagem">Anexar imagem</string>
    <string name="action_anexar_audio">Anexar audio</string>
    <string name="action_anexar_video">Anexar vídeo</string>
    <string name="action_enviar">Enviar</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descição</string>
    <string name="anexos">Anexos</string>
    <string name="nome_anexo">nome do arquivo</string>
    <string name="excluir_anexo">x</string>

</resources>
