<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyActivity" >
    <item
        android:id="@+id/action_enviar"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_enviar"
        android:title="@string/action_enviar">
    </item>
    <item
        android:id="@+id/action_anexar_imagem"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_anexar_imagem">

    </item>
    <item
        android:id="@+id/action_anexar_audio"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_anexar_audio" />
    <item
        android:id="@+id/action_anexar_video"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_anexar_video" />
</menu>
